--- a/GG.css
+++ b/GG.css
@@ -6,6 +6,11 @@ body{
     height: fit-content;
  
 }
+p{
+    font-family: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
 .navbar{
    margin-top: 50px;
 }
@@ -57,3 +62,141 @@ h2{
         font-size: 16px;
     }
 }
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+}
+
+header {
+    background-color: black;
+    color: whitesmoke;
+    text-align: center;
+    padding: 20px;
+}
+
+h1 {
+    margin: 0;
+}
+
+h3 {
+    font-size: 20px;
+    text-align: center;
+    margin: 10px 0;
+}
+
+.navbar {
+    text-align: center;
+}
+
+nav {
+    margin-top: 10px;
+}
+
+nav a {
+    text-decoration: none;
+    margin: 0 10px;
+    color: white;
+}
+
+
+#Home {
+    background-color: antiquewhite;
+    padding: 20px;
+}
+
+#Home img {
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    float: left;
+  
+}
+
+#Home h2 {
+    font-size: 24px;
+    margin-top: 10px;
+}
+
+#Home p {
+    font-size: 18px;
+    text-align: justify;
+    text-align: center;
+}
+
+.button {
+    text-align: center;
+    margin: 10px 0;
+}
+
+.button button {
+    padding: 10px 20px;
+    font-size: 18px;
+    margin: 5px;
+    border: rgb(247, 242, 242);
+    border-radius: 50px;
+    background-color: black;
+    color: white;
+  
+}
+
+.icon img{
+width: 50px;
+height: 50px;
+margin-left: 25px;
+}
+
+.FOOT{
+display: flex;
+flex-direction: row;
+width: 100%;
+justify-content: center;
+}
+
+.container-image{
+
+margin: 13px;
+}
+.container-image img{
+    width: 250px;
+    height: 300px;
+}
+.hot{
+    border: solid white;
+    background-color: white;
+   
+    
+}
+.mild{
+    border: solid white;
+    background-color: white;
+}
+.lemon{
+    border: solid white;
+    background-color: white;
+}
+.zoom{
+    border: solid white;
+    background-color: white;
+}
+.container-image{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
+}
+ .container-image p{
+    text-align: center;
+ }
+.container-image button{
+    text-align: center;
+    margin-left: 40%;
+    margin-right: 20px;
+    padding-left: 13px;
+    background-color: red;
+    color: white;
+}
+ .about{
+  text-align: center;
+  padding: 16px;
+ }
